# wot-replay-parser

./: .gitignore  .travis.yml  BattleResult.cpp  BattleResult.hpp  BattleSetup.cpp  BattleSetup.hpp  CMakeLists.txt  ChatMessage.cpp  ChatMessage.hpp  Common.hpp  DataBlock.cpp  DataBlock.hpp  GameState.cpp  GameState.hpp  GameVersion.cpp  GameVersion.hpp  LICENSE  MatchData.cpp  MatchData.hpp  MatchStart.cpp  MatchStart.hpp  Packet.cpp  Packet.hpp  Packets.hpp  Parser.cpp  Parser.hpp  Payload.hpp  Personal.cpp  Personal.hpp  README.md  RoamingSettings.cpp  RoamingSettings.hpp  UnPickle.cpp  UnPickle.hpp  Vehicle.cpp  Vehicle.hpp  VehiclePosition.cpp  VehiclePosition.hpp  Version.cpp  Version.hpp  (+2 more)
ext/cryptopp/: CMakeLists.txt
ext/zlib/: CMakeLists.txt
test/: BattleResult.cc  BattleSetup.cc  CMakeLists.txt  ChatMessage.cc  DataBlock.cc  GTest.cmake  GameVersion.cc  Parser.cc  RoamingSettings.cc  UnPickle.cc  VehiclePosition.cc  Version.cc
test/data/: roaming_settings.json  test_replay.wotreplay  v0.9.4_cw_replay.wotreplay  v0.9.4_replay.wotreplay  v0.9.5_replay.wotreplay
